--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,44 +1,33 @@
 
 bold_font auto
 bold_italic_font auto
+background_opacity  0.7
 
 font_size 10
 disable_ligatures never
 
 open_url_with Zen Browser
 
-copy_on_select yes
-background_opacity .7
+# Theme ported from the Mac Terminal application.
 
-foreground  #95eaf0
-background   #000000
-cursor      #FFFFFF
-
-color0       #180c08
-color8       #64878b
-color1       #575C5E
-color9       #575C5E
-
-color2      #b9c6c7
-#: name display one
-
-color10      #A53B37
-color3       #82766F
-color11      #82766F
-
-color4       #7d827d
-#: one of the flakes
-
-color12      #ADA945
-
-color5       #FFFFFF
-
-color13      #215F8D
-
-color6      #4d4f4d
-#:info one and flake
-
-color14      #465191
-color7       #90c2c7
-color15      #90c2c7
-
+background            #110b0d
+foreground            #f6d56a
+cursor                #ff0017
+selection_background  #f6d56a
+color0                #341a0d
+color8                #874227
+color1                #9b281b
+color9                #ff4230
+color2                #626132
+color10               #b3b163
+color3                #c26e27
+color11               #ff9565
+color4                #515b5c
+color12               #9eb2b3
+color5                #9b1d29
+color13               #ff5b6a
+color6                #588056
+color14               #89cc8e
+color7                #f6d75c
+color15               #ffe597
+selection_foreground #110b0d
