--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,6 +4,9 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = ~/bash/./hwifi.sh
 
+
+
+
 #exec-once = ~/.config/hypr/xdg-portal-hyprland
 #exec-once = swww-daemon
 #exec-once = wl-clipboard-history -t
@@ -16,7 +19,7 @@ exec-once = ~/bash/./hwifi.sh
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
-monitor=eDP-1,1920x1080,auto,1.25
+monitor=eDP-1,1920x1080,auto,1
 misc {
 disable_hyprland_logo = true
 }
@@ -44,7 +47,7 @@ general {
   gaps_out= 5
   border_size= 1
   resize_on_border = true
-  col.active_border = rgba(54ECDDee) rgba(000000aa) 90deg
+  col.active_border = rgba(ff0017ff) rgba(fabb0cff) 90deg
   col.inactive_border = rgba(1E5D27aa)
   allow_tearing = false # Check https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
   layout = dwindle
@@ -59,17 +62,13 @@ general {
 
 decoration {
     rounding = 5
-    active_opacity = 1
+    active_opacity = 0.95
     inactive_opacity = 0.8
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     blur {
         enabled = true
-        size = 1
+        size = 5
         passes = 3
         vibrancy = 0.1696
     }
@@ -92,7 +91,6 @@ animations {
 
 # LAYOUT
 dwindle {
-  no_gaps_when_only = false
   pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
   preserve_split = true # you probably want this
 }
@@ -137,7 +135,7 @@ bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, kitty
 bind = SUPER, E, exec, dolphin
-bind = SUPER, B, exec, flatpak run io.github.zen_browser.zen
+bind = SUPER, B, exec, flatpak run --env=MOZ_ENABLE_WAYLAND=1 io.github.zen_browser.zen
 bind = SUPER, escape, exec, shutdown now
 bind = SUPER, L, exec, hyprlock
 #bind = SUPER, B, exec, firefox
