--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 
 bold_font auto
 bold_italic_font auto
-background_opacity  0.7
+background_opacity  0.8
 
 font_size 10
 disable_ligatures never
@@ -10,24 +10,24 @@ open_url_with Zen Browser
 
 # Theme ported from the Mac Terminal application.
 
-background            #110b0d
-foreground            #f6d56a
+background            #000000
+foreground            #ebd85b
 cursor                #ff0017
 selection_background  #f6d56a
 color0                #341a0d
 color8                #874227
-color1                #9b281b
+color1                #95bd5e
 color9                #ff4230
-color2                #626132
-color10               #b3b163
+color2                #f77d02 
+color10               #95bd5e
 color3                #c26e27
 color11               #ff9565
-color4                #515b5c
+color4                #d0d4c9
 color12               #9eb2b3
 color5                #9b1d29
 color13               #ff5b6a
 color6                #588056
 color14               #89cc8e
-color7                #f6d75c
-color15               #ffe597
-selection_foreground #110b0d
+color7                #000000
+color15               #ffffff
+selection_foreground  #52363f
