--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,10 @@
 
 bold_font auto
 bold_italic_font auto
-background_opacity  0.8
+allow_remote_control yes
+background_image /home/lostfromlight/NMN/Luminarium/grad.jpg
+background_image_layout scaled
+background_opacity  0.5
 
 font_size 10
 disable_ligatures never
@@ -11,7 +14,7 @@ open_url_with Zen Browser
 # Theme ported from the Mac Terminal application.
 
 background            #000000
-foreground            #ebd85b
+foreground            #85d4d1
 cursor                #ff0017
 selection_background  #f6d56a
 color0                #341a0d
