--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,7 +6,6 @@ exec-once = ~/bash/./hwifi.sh
 
 
 
-
 #exec-once = ~/.config/hypr/xdg-portal-hyprland
 #exec-once = swww-daemon
 #exec-once = wl-clipboard-history -t
@@ -97,7 +96,8 @@ dwindle {
 
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
-windowrulev2 = float, class:(thunar), title:(File Operation Progress)
+#windowrulev2 = float,class:^(com.mitchellh.ghostty)$
+windowrulev2 = float, class:ghostty, title:ghostty
 windowrule = float, confirm
 windowrule = float, dialog
 windowrule = float, download
