--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ general {
   gaps_out= 5
   border_size= 1
   resize_on_border = true
-  col.active_border = rgba(ff0017ff) rgba(fabb0cff) 90deg
+  col.active_border = rgba(9e0f05ff) rgba(d10e00ff) 90deg
   col.inactive_border = rgba(1E5D27aa)
   allow_tearing = false # Check https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
   layout = dwindle
@@ -133,11 +133,13 @@ windowrule = move 75 44%, title:^(Volume Control)$
 bind = SUPER SHIFT, W, exec, bash/./hyprpaper.sh
 bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
-bind = SUPER, X, exec, kitty
+bind = SUPER, X, exec, ghostty
 bind = SUPER, E, exec, dolphin
-bind = SUPER, B, exec, flatpak run --env=MOZ_ENABLE_WAYLAND=1 io.github.zen_browser.zen
+bind = SUPER, B, exec, floorp 
 bind = SUPER, escape, exec, shutdown now
 bind = SUPER, L, exec, hyprlock
+bind = SUPER, C, exec, bash/./config.sh
+bind = SUPER, U, exec, dbus-run-session -- steam-run $(which unityhub)
 #bind = SUPER, B, exec, firefox
 #bind = SUPER, W, exec, looking-glass-client -F
 #bind = SUPER SHIFT, W, exec, swww img "$(find ~/Pictures/backgrounds -type f | shuf -n 1)" --transition-fps 60 --transition-type wipe
