--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = /home/lostfromlight/NMN/Luminarium/firewatch.jpg
+preload = /home/lostfromlight/NMN/Luminarium/hakutori.png
 
-wallpaper = ,/home/lostfromlight/NMN/Luminarium/firewatch.jpg
+wallpaper = ,/home/lostfromlight/NMN/Luminarium/hakutori.png
 
 splash = false
