--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,478 +1,78 @@
 {
-  "layer": "top",
-  "position": "top",
-  "mode": "dock",
-  "reload_style_on_change": true,
-  "gtk-layer-shell": true,
+    // "layer": "top", // Waybar at top layer
+    // "position": "bottom", // Waybar position (top|bottom|left|right)
+    // "height": 30, // Waybar height (to be removed for auto height)
+    "margin": "5 20 0 20",
+        // "width": 1280, // Waybar width
+        // Choose the order of the modules
+        "modules-left": ["hyprland/workspaces", "custom/updates"],
+        "modules-center": ["clock", "custom/weather"],
+        "modules-right": ["pulseaudio", "backlight", "battery", "custom/ytube", "tray"],
+
+
+        //***************************
+        //*  Modules configuration  *
+        //***************************
+
+
+        "custom/updates": {
+            "format": "   ",
+            "interval": 7200,     
+            "on-click": "dolphin", 
+            "signal": 8
+        },
+
+       
+        "clock": {
+            "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+            "format": "{:%a, %d %b, %I:%M %p}"
+        },
+
+       
+        "pulseaudio": {
+            "reverse-scrolling": 1,
+            "format": "{volume}% {icon}",
+            "format-bluetooth": "{volume}% {icon} ",
+            "format-muted": " {format_source}",
+            "format-source-muted": "Mute 🚫",
+            "format-icons": {
+                "headphone": "",
+                "default": ["🕨", "🕩", "🕪"]
+            },
+            "on-click": "pavucontrol",
+            "min-length": 13,
+        },
+
+        "backlight": {
+            "device": "intel_backlight",
+            "format": "{percent}% {icon}",
+            "format-icons": ["🌑","🌒","🌓","🌔", "🌕"],
+            "min-length": 5,
+        },
+
+        "battery": {
+            "states": {
+                "warning": 30,
+                "critical": 15
+            },
+            "format": " {capacity}% {icon} ",
+            "format-charging": "{capacity}% ",
+            "format-plugged": "{capacity}% ",
+            "format-alt": "{time} {icon}",
+            "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█", "", ""],
+            "on-update": "$HOME/.config/waybar/scripts/check_battery.sh",
+        },
+
+        "tray": {
+            "icon-size": 16,
+            "spacing": 4
+        },
+
+        "custom/ytube": {
+            "format": " 󰗃  {} ",
+            "interval": 15,
+            "exec": "$HOME/.local/scripts/ytsubs.sh",
+            "exec-if": "exit 0"
+        },
 
-  // <<--< Positions >-->>
-
-  "modules-left": [
-    "custom/ws",            // window icon
-    "custom/left1",
-
-    "hyprland/workspaces",  // workspaces
-    "custom/right1",
-
-    "custom/paddw",
-    "hyprland/window"       // window title
-  ],
-
-  "modules-center": [
-    "custom/paddc",
-    "custom/left2",
-    "custom/cpuinfo",       // temperature
-
-    "custom/left3",
-    "memory",               // memory
-
-    "custom/left4",
-    "cpu",                  // cpu
-    "custom/leftin1",
-
-    "custom/left5",
-    "custom/distro",        // distro icon
-    "custom/right2",
-
-    "custom/rightin1",
-    "idle_inhibitor",       // idle inhibitor
-    "clock#time",           // time
-    "custom/right3",
-
-    "clock#date",           // date
-    "custom/right4",
-
-    "custom/wifi",          // wi-fi
-    "bluetooth",            // bluetooth
-    "custom/update",        // system update
-    "custom/right5"
-  ],
-
-  "modules-right": [
-    "mpris",                // media info
-
-    "custom/left6",
-    "pulseaudio",           // output device
-
-    "custom/left7",
-    "backlight",            // brightness
-
-    "custom/left8",
-    "battery",              // battery
-
-    "custom/leftin2",
-    "custom/power"          // power button
-  ],
-
-  // <<--< Modules >-->>
-
-  "custom/ws": {
-    "exec": "~/.config/waybar/scripts/current-theme.sh",
-    "return-type": "json",
-    "format": " 󰍜 ",
-    "on-click": "~/.config/waybar/scripts/theme-switcher.sh",
-    "min-length": 3,
-    "max-length": 3
-  },
-
-  "hyprland/workspaces": {
-    "on-scroll-up": "hyprctl dispatch workspace -1",
-    "on-scroll-down": "hyprctl dispatch workspace +1",
-    "persistent-workspaces": {
-      "1": [],
-      "2": [],
-      "3": [],
-      "4": [],
-      "5": []
-    }
-  },
-
-  "hyprland/window": {
-    "format": "{}",
-    "tooltip": false,
-    "min-length": 5,
-
-    "rewrite": {
-      // Desktop
-      "": 
-        "<span foreground='#89b4fa'> </span> Hyprland",
-
-      // Terminal
-      "~": "  Terminal",
-      "zsh": "  Terminal",
-      "kitty": "  Terminal",
-
-      "tmux(.*)": 
-        "<span foreground='#a6e3a1'> </span> Tmux",
-
-      // Browser
-
-      "(.*)Mozilla Firefox": 
-        "<span foreground='#f38ba8'>󰈹 </span> Firefox",
-      "(.*) — Mozilla Firefox": 
-        "<span foreground='#f38ba8'>󰈹 </span> $1",
-
-      "(.*)Zen Browser": 
-        "<span foreground='#fab387'>󰺕 </span> Zen Browser",
-      "(.*) — Zen Browser": 
-        "<span foreground='#fab387'>󰺕 </span> $1",
-
-      // Development
-
-      "(.*) - Visual Studio Code": 
-        "<span foreground='#89b4fa'>󰨞 </span> $1",
-      "(.*)Visual Studio Code": 
-        "<span foreground='#89b4fa'>󰨞 </span> Visual Studio Code",
-
-      "nvim": 
-        "<span foreground='#a6e3a1'> </span> Neovim",
-      "nvim (.*)": 
-        "<span foreground='#a6e3a1'> </span> $1",
-
-      "vim": 
-        "<span foreground='#a6e3a1'> </span> Vim",
-      "vim (.*)": 
-        "<span foreground='#a6e3a1'> </span> $1",
-
-      // Media
-
-      "(.*)Spotify": 
-        "<span foreground='#a6e3a1'> </span> Spotify",
-      "(.*)Spotify Premium": 
-        "<span foreground='#a6e3a1'> </span> Spotify Premium",
-
-      "OBS(.*)": 
-        "<span foreground='#a6adc8'> </span> OBS Studio",
-
-      "VLC media player": 
-        "<span foreground='#fab387'>󰕼 </span> VLC Media Player",
-      "(.*) - VLC media player": 
-        "<span foreground='#fab387'>󰕼 </span> $1",
-
-      "(.*) - mpv": 
-        "<span foreground='#cba6f7'> </span> $1",
-
-      "qView": "  qView",
-
-      "(.*).jpg": "  $1.jpg",
-      "(.*).png": "  $1.png",
-      "(.*).svg": "  $1.svg",
-
-      // Social
-
-      "vesktop": 
-        "<span foreground='#89b4fa'> </span> Discord",
-
-      "• Discord(.*)": "Discord$1",
-      "(.*)Discord(.*)": 
-        "<span foreground='#89b4fa'> </span> $1Discord$2",
-
-      // Documents
-
-      "ONLYOFFICE Desktop Editors": 
-        "<span foreground='#f38ba8'> </span> OnlyOffice Desktop",
-
-      "(.*).docx": 
-        "<span foreground='#89b4fa'> </span> $1.docx",
-      "(.*).xlsx": 
-        "<span foreground='#a6e3a1'> </span> $1.xlsx",
-      "(.*).pptx": 
-        "<span foreground='#fab387'> </span> $1.pptx",
-      "(.*).pdf": 
-        "<span foreground='#f38ba8'> </span> $1.pdf",
-
-      // System
-      "Authenticate": "  Authenticate"
-    }
-  },
-
-  "custom/cpuinfo": {
-    "exec": "~/.config/waybar/scripts/cpu-temp.sh",
-    "return-type": "json",
-    "format": "{}",
-    "interval": 5,
-    "min-length": 8,
-    "max-length": 8
-  },
-
-  "memory": {
-    "states": {
-      "warning": 75,
-      "critical": 90
-    },
-
-    "format": "󰘚 {percentage}%",
-    "format-critical": "󰀦 {percentage}%",
-    "tooltip": false,
-    // "tooltip-format": "Memory Used: {used:0.1f} GB / {total:0.1f} GB",
-    "interval": 5,
-    "min-length": 7,
-    "max-length": 7
-  },
-
-  "cpu": {
-    "format": "󰻠 {usage}%",
-    "tooltip": false,
-    "interval": 5,
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  "custom/distro": {
-	  "format": " ",
-	  "tooltip": false
-  },
-
-  "idle_inhibitor": {
-    "format": "{icon}",
-
-    "format-icons": {
-      "activated": "󰈈 ",
-      "deactivated": "󰈉 "
-    },
-
-    "tooltip-format-activated": "Presentation Mode",
-    "tooltip-format-deactivated": "Idle Mode",
-    "start-activated": false
-  },
-
-  "clock#time": {
-    "format": "{:%H:%M}",
-    "tooltip": false,
-    // "tooltip-format": "Standard Time: {:%I:%M %p}",
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  "clock#date": {
-    "format": "󰨳 {:%m-%d}",
-    "tooltip-format": "<tt>{calendar}</tt>",
-
-    "calendar": {
-      "mode": "month",
-      "mode-mon-col": 6,
-      "on-click-right": "mode",
-
-      "format": {
-        "months": 
-          "<span color='#b4befe'><b>{}</b></span>",
-        "weekdays": 
-          "<span color='#a6adc8' font='7'>{}</span>",
-        "today": 
-          "<span color='#f38ba8'><b>{}</b></span>"
-      }
-    },
-
-    "actions": {
-      "on-click": "mode",
-      "on-click-right": "mode"
-    },
-
-    "min-length": 8,
-    "max-length": 8
-  },
-
-  "custom/wifi": {
-    "exec": "~/.config/waybar/scripts/wifi-status.sh",
-    "return-type": "json",
-    "format": "{}",
-    "on-click": "~/.config/waybar/scripts/wifi-menu.sh",
-    "on-click-right": "kitty --title '󰤨  Network Manager TUI' bash -c nmtui",
-    "interval": 1,
-    "min-length": 1,
-    "max-length": 1
-  },
-
-  "bluetooth": {
-    "format": "󰂰",
-    "format-disabled": "󰂲",
-    "format-connected": "󰂱",
-    "format-connected-battery": "󰂱",
-
-    "tooltip-format": 
-      "{num_connections} connected",
-    "tooltip-format-disabled": 
-      "Bluetooth Disabled",
-    "tooltip-format-connected": 
-      "{device_enumerate}",
-    "tooltip-format-enumerate-connected": 
-      "{device_alias}",
-    "tooltip-format-enumerate-connected-battery": 
-      ":: {device_alias}: 󱊣 {device_battery_percentage}%",
-
-    "on-click": "~/.config/waybar/scripts/bluetooth-menu.sh",
-    "on-click-right": "kitty --title '󰂯  Bluetooth TUI' bash -c bluetui",
-    "interval": 1,
-    "min-length": 1,
-    "max-length": 1
-  },
-
-  "custom/update": {
-    "exec": "~/.config/waybar/scripts/system-update.sh",
-    "return-type": "json",
-    "format": "{}",
-    "on-click": "hyprctl dispatch exec '~/.config/waybar/scripts/system-update.sh up'",
-    "interval": 30,
-    "min-length": 1,
-    "max-length": 1
-  },
-
-  "mpris": {
-    "format": "{player_icon} {title} - {artist}",
-    "format-paused": "{status_icon} {title} - {artist}",
-
-    "player-icons": {
-      "default": "󰝚 ",
-      "spotify": "<span foreground='#a6e3a1'>󰓇 </span>",
-      "firefox": "<span foreground='#f38ba8'>󰗃 </span>"
-    },
-    "status-icons": {
-      "paused": "<span color='#b4befe'>\u200A\u200A󰏤\u2009\u2009</span>"
-    },
-
-    "tooltip-format": "Playing: {title} - {artist}",
-    "tooltip-format-paused": "Paused: {title} - {artist}",
-    "min-length": 5,
-    "max-length": 35
-  },
-
-  "pulseaudio": {
-    "format": "{icon} {volume}%",
-    "format-muted": "󰝟 {volume}%",
-
-    "format-icons": {
-      "default": ["󰕿", "󰖀", "󰕾"],
-      "headphone": "󰋋",
-      "headset": "󰋋"
-    },
-
-    "tooltip-format": "Device: {desc}",
-    "on-click": "~/.config/waybar/scripts/volume-control.sh -o m",
-    "on-scroll-up": "~/.config/waybar/scripts/volume-control.sh -o i",
-    "on-scroll-down": "~/.config/waybar/scripts/volume-control.sh -o d",
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  "backlight": {
-    "format": "{icon} {percent}%",
-    "format-icons": ["", "", "", "", "", "", "", "", ""],
-    "tooltip": false,
-    "on-scroll-up": "~/.config/waybar/scripts/brightness-control.sh -o i",
-    "on-scroll-down": "~/.config/waybar/scripts/brightness-control.sh -o d",
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  "battery": {
-    "states": {
-      "warning": 20,
-      "critical": 10
-    },
-
-    "format": "{icon} {capacity}%",
-    "format-icons": ["󰂎", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
-    "format-charging": " {capacity}%",
-
-    "tooltip-format": "Discharging: {time}",
-    "tooltip-format-charging": "Charging: {time}",
-    "interval": 1,
-    "min-length": 6,
-    "max-length": 6
-  },
-
-  "custom/power": {
-    "format": " ",
-    "tooltip": false,
-    // "tooltip-format": "Power Menu",
-    "on-click": "~/.config/waybar/scripts/power-menu.sh"
-  },
-
-  // <<--< Padding >-->>
-
-  "custom/paddw": {
-    "format": " ",
-    "tooltip": false
-  },
-
-  "custom/paddc": {
-    "format": " ",
-    "tooltip": false
-  },
-
-  // Left Arrows
-
-  "custom/left1": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left2": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left3": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left4": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left5": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left6": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left7": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/left8": {
-    "format": "",
-    "tooltip": false
-  },
-
-  // Right Arrows
-
-  "custom/right1": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right2": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right3": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right4": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/right5": {
-    "format": "",
-    "tooltip": false
-  },
-
-  // Left Inverse
-
-  "custom/leftin1": {
-    "format": "",
-    "tooltip": false
-  },
-  "custom/leftin2": {
-    "format": "",
-    "tooltip": false
-  },
-
-  // Right Inverse
-
-  "custom/rightin1": {
-    "format": "",
-    "tooltip": false
-  }
 }
