--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -5,9 +5,9 @@
     "margin": "5 20 0 20",
         // "width": 1280, // Waybar width
         // Choose the order of the modules
-        "modules-left": ["hyprland/workspaces", "custom/updates"],
+        "modules-left": ["custom/updates", "custom/spotify"],
         "modules-center": ["clock", "custom/weather"],
-        "modules-right": ["pulseaudio", "backlight", "battery", "custom/ytube", "tray"],
+        "modules-right": ["custom/cava","pulseaudio", "backlight", "battery", "custom/ytube", "tray"],
 
 
         //***************************
@@ -22,12 +22,23 @@
             "signal": 8
         },
 
+		"custom/spotify": {
+		  "format": "  {}",
+		  "interval": 5,
+		  "on-click": "flatpak run com.spotify.Client",
+		  "exec": "~/.config/waybar/scripts/spotify.sh"
+		},
+
        
         "clock": {
             "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-            "format": "{:%a, %d %b, %I:%M %p}"
+            "format": "{:%a | %d %b | %I:%M %p}"
         },
 
+		"custom/cava": {
+				"format": "{}",
+				"exec": "~/.config/waybar/scripts/cava.sh"
+			},
        
         "pulseaudio": {
             "reverse-scrolling": 1,
@@ -56,11 +67,11 @@
                 "critical": 15
             },
             "format": " {capacity}% {icon} ",
-            "format-charging": "{capacity}% ",
+            "format-charging": "{capacity}% ",
             "format-plugged": "{capacity}% ",
             "format-alt": "{time} {icon}",
-            "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█", "", ""],
-            "on-update": "$HOME/.config/waybar/scripts/check_battery.sh",
+            "format-icons": ["▁", "▂", "▃", "▄", "▅"],
+            
         },
 
         "tray": {
@@ -68,11 +79,5 @@
             "spacing": 4
         },
 
-        "custom/ytube": {
-            "format": " 󰗃  {} ",
-            "interval": 15,
-            "exec": "$HOME/.local/scripts/ytsubs.sh",
-            "exec-if": "exit 0"
-        },
 
 }
