--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,13 +1,8 @@
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    // "height": 30, // Waybar height (to be removed for auto height)
     "margin": "5 20 0 20",
-        // "width": 1280, // Waybar width
-        // Choose the order of the modules
-        "modules-left": ["custom/updates", "custom/spotify"],
-        "modules-center": ["clock", "custom/weather"],
-        "modules-right": ["custom/cava","pulseaudio", "backlight", "battery", "custom/ytube", "tray"],
+        "modules-left": ["custom/updates", "custom/spotify", "custom/cava"],
+        "modules-center": ["clock"],
+        "modules-right": ["network","pulseaudio", "backlight", "battery", "custom/ytube", "tray"],
 
 
         //***************************
@@ -29,7 +24,6 @@
 		  "exec": "~/.config/waybar/scripts/spotify.sh"
 		},
 
-       
         "clock": {
             "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
             "format": "{:%a | %d %b | %I:%M %p}"
@@ -39,11 +33,18 @@
 				"format": "{}",
 				"exec": "~/.config/waybar/scripts/cava.sh"
 			},
-       
+
+			  "network": {
+		  "format-wifi": "󰤨  {essid} ({signalStrength}%)",
+		  "format-ethernet": "󰈁 Ethernet",
+		  "format-disconnected": "󰤭 Disconnected",
+		  "on-click": "/home/lostfromlight/.config/waybar/scripts/nmtui.sh"
+		},
+
         "pulseaudio": {
             "reverse-scrolling": 1,
             "format": "{volume}% {icon}",
-            "format-bluetooth": "{volume}% {icon} ",
+            "format-bluetooth": "{volume}% {icon}",
             "format-muted": " {format_source}",
             "format-source-muted": "Mute 🚫",
             "format-icons": {
