--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -5,17 +5,6 @@ exec-once = hyprpaper
 exec-once = ~/bash/./hwifi.sh
 
 
-
-#exec-once = ~/.config/hypr/xdg-portal-hyprland
-#exec-once = swww-daemon
-#exec-once = wl-clipboard-history -t
-#exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
-#exec-once = swww img "$(find ~/Pictures/backgrounds -type f | shuf -n 1)"
-#exec-once = ags -c ~/.config/ags/config.js
-#exec-once = dunst
-
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 monitor=eDP-1,1920x1080,auto,1
@@ -42,9 +31,9 @@ gestures {
 }
 
 general {
-  gaps_in= 3
-  gaps_out= 1
-  border_size= 1
+  gaps_in= 5
+  gaps_out= 5
+  border_size= 2
   resize_on_border = true
   col.active_border = rgba(bef6faff) rgba(92f1f7ff) 90deg
   col.inactive_border = rgba(1E5D27aa)
@@ -61,8 +50,8 @@ general {
 
 decoration {
     rounding = 5
-    active_opacity = 0.95
-    inactive_opacity = 0.8
+    active_opacity = 1.0
+    inactive_opacity = 0.95
 
 
     blur {
@@ -129,28 +118,20 @@ windowrule = move 75 44%, title:^(Volume Control)$
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
 
-#bind = SUPER SHIFT, R, exec, ~/.config/waybar/scripts/launch.sh
 bind = SUPER SHIFT, W, exec, bash/./hyprpaper.sh
 bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, ghostty
-bind = SUPER, E, exec, nemo
-bind = SUPER, B, exec, one.ablaze.floorp 
+bind = SUPER, E, exec, dolphin
+bind = SUPER, B, exec, librewolf
 bind = SUPER, escape, exec, shutdown now
 bind = SUPER, L, exec, hyprlock
 bind = SUPER, C, exec, bash/./config.sh
 bind = SUPER, U, exec, dbus-run-session -- steam-run $(which unityhub)
-#bind = SUPER, B, exec, firefox
-#bind = SUPER, W, exec, looking-glass-client -F
-#bind = SUPER SHIFT, W, exec, swww img "$(find ~/Pictures/backgrounds -type f | shuf -n 1)" --transition-fps 60 --transition-type wipe
-#bind = SUPER, period, exec, killall rofi || rofi -show emoji -emoji-format "{emoji}" -modi emoji -theme ~/.config/rofi/global/emoji -normal-window
-#bind = SUPER SHIFT, X, exec, hyprpicker -a -n
-#bind = SUPER, F1, exec, ~/.config/hypr/keybind
 bind = SUPER, F, fullscreen,
 bind = SUPER, Q, killactive,
 bind = SUPER SHIFT, Q, exit,
 bind = CTRL ALT, L, exec, hyprlock
-#bind = Ctrl SHIFT, S, exec, systemctl suspend
 bind = SUPER, escape, exec, wlogout --protocol layer-shell -b 5 -T 400 -B 400
 bind = Ctrl SHIFT, R, exec, reboot
 
