--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -4,26 +4,26 @@ general {
 
 background {
     monitor =
-    path = $HOME//NMN/Luminarium/mirrorvoid.png  
+    path = $HOME//NMN/Luminarium/amy_lee/amy_lee.png
 }
 
 input-field {
     monitor =
-    size = 200, 50
+    size = 100, 30
     outline_thickness = 3
     dots_size = 0.33 
     dots_spacing = 0.15 
     dots_center = true
     dots_rounding = -1 
-    outer_color = rgb(151515)
-    inner_color = rgb(FFFFFF)
-    font_color = rgb(10, 10, 10)
+    outer_color = rgb(000000)
+    inner_color = rgb(000000)
+    font_color = rgb(140, 140, 140)
     fade_on_empty = true
     fade_timeout = 1000 
-    placeholder_text = <i>Name the Goddess..</i> 
+    placeholder_text = <i> Remember Thyself...</i> 
     hide_input = false
     rounding = 40 
-    check_color = rgb(204, 136, 34)
+    check_color = rgb(ff, ff, ff)
     fail_color = rgb(204, 34, 34) 
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> 
     fail_transition = 300 
@@ -32,9 +32,9 @@ input-field {
     bothlock_color = -1 
     invert_numlock = false 
     swap_font_color = false 
-    position = 0, -20
-    halign = center
-    valign = center
+    position = 150, -360
+    halign = left
+    valign = top
     shadow_passes = 10
     shadow_size = 20
     shadow_color = rgb(0,0,0)
@@ -45,10 +45,10 @@ label {
     monitor =
     #clock
     text = cmd[update:1000] echo "$TIME"
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 65
-    font_family = Barron
-    position = -100, 70
+    color = rgba(138, 140, 140, 1)
+    font_size = 125
+    font_family = evanescent
+    position = -70, 20
     halign = right
     valign = bottom
     shadow_passes = 5
@@ -58,29 +58,29 @@ label {
 label {
     monitor =
     text = $USER
-    color = rgba(220, 224, 224)
-    font_size = 26
-    font_family =  Barron
-    position = -100, 145
-    halign = right
-    valign = bottom
+    color = rgba(138, 140, 140, 1)
+    font_size = 55
+    font_family =  evanescent
+    position = 50, -25
+    halign = left
+    valign = top
     shadow_passes = 5
     shadow_size = 10
 }
 
 image {
     monitor =
-    path = $HOME/NMN/Luminarium/lady.png
-    size = 280
+    path = $HOME/NMN/Luminarium/mongrel.jpg
+    size = 230
     rounding = -10
     border_size = 1
-    border_color = rgb(156, 240, 240)
+    border_color = rgb(0, 0, 0)
     rotate = 0 
     reload_time = -1 
 #    reload_cmd =  
-    position = 0, 180
-    halign = center
-    valign = center
+    position = 95, -110
+    halign = left
+    valign = top
     shadow_passes = 10
     shadow_size = 20
     shadow_color = rgb(0,0,0)
