--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -124,6 +124,7 @@ bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, ghostty
 bind = SUPER, E, exec, dolphin
 bind = SUPER, B, exec, librewolf
+bind = SUPER, S, exec, com.spotify.Client
 bind = SUPER, escape, exec, shutdown now
 bind = SUPER, L, exec, hyprlock
 bind = SUPER, C, exec, bash/./config.sh
@@ -134,6 +135,8 @@ bind = SUPER SHIFT, Q, exit,
 bind = CTRL ALT, L, exec, hyprlock
 bind = SUPER, escape, exec, wlogout --protocol layer-shell -b 5 -T 400 -B 400
 bind = Ctrl SHIFT, R, exec, reboot
+bind = SUPER, O, exec, obsidian
+bind = SUPER, D, exec, com.discordapp.Discord
 
 # MULTIMEDIA & BRIGHTNESS
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -160,7 +163,7 @@ bind = SUPER, down, movefocus, d
 
 bind = SUPER, Space, togglefloating,
 bind = SUPER, P, pseudo, # dwindle
-bind = SUPER, S, togglesplit, # dwindle
+bind = SUPER, T, togglesplit, # dwindle
 
 bind = SUPER SHIFT, left, movewindow, l
 bind = SUPER SHIFT, right, movewindow, r
@@ -224,3 +227,6 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
+env = BROWSER,librewolf
+env = DEFAULT_BROWSER,librewolf
+
