--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
     monitor =
-    path = $HOME//NMN/Luminarium/amy_lee/amy_lee.png
+    path = $HOME/.config/hypr/amy_lee.png
 }
 
 input-field {
@@ -70,7 +70,7 @@ label {
 
 image {
     monitor =
-    path = $HOME/NMN/Luminarium/mongrel.jpg
+    path = $HOME/.config/hypr/mongrel.jpg
     size = 230
     rounding = -10
     border_size = 1
