--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -123,7 +123,7 @@ bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, ghostty
 bind = SUPER, E, exec, dolphin
-bind = SUPER, B, exec, librewolf
+bind = SUPER, B, exec, floorp
 bind = SUPER, S, exec, com.spotify.Client
 bind = SUPER, escape, exec, shutdown now
 bind = SUPER, L, exec, hyprlock
@@ -137,6 +137,8 @@ bind = SUPER, escape, exec, wlogout --protocol layer-shell -b 5 -T 400 -B 400
 bind = Ctrl SHIFT, R, exec, reboot
 bind = SUPER, O, exec, obsidian
 bind = SUPER, D, exec, com.discordapp.Discord
+bind = SUPER SHIFT, B, exec, /home/lostfromlight/blender/result/bin/blender-fhs
+
 
 # MULTIMEDIA & BRIGHTNESS
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -227,6 +229,6 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
-env = BROWSER,librewolf
-env = DEFAULT_BROWSER,librewolf
+env = BROWSER,floorp
+env = DEFAULT_BROWSER,floorp
 
