hyprlock and mpv

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,8 +1,8 @@
 # █▀▀ ▀▄▀ █▀▀ █▀▀
 # ██▄ █░█ ██▄ █▄▄
+exec-once = hyprlock
+exec-once = bash -c "sleep 0.5 && hyprpaper"
 exec-once = waybar
-exec-once = hyprpaper
-exec-once = ~/bash/./hwifi.sh
 
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
@@ -63,18 +63,24 @@ decoration {
 }
 
 animations {
-  enabled = true
-  bezier = overshot, 0.05, 0.9, 0.1, 1.05
-  bezier = smoothOut, 0.36, 0, 0.66, -0.56
-  bezier = smoothIn, 0.25, 1, 0.5, 1
+  enabled = false
+#  bezier = overshot, 0.05, 0.9, 0.1, 1.05
+#  bezier = smoothOut, 0.36, 0, 0.66, -0.56
+#  bezier = smoothIn, 0.25, 1, 0.5, 1
+  bezier = linear, 1.0, 1.0, 0.0, 0.0
 
-  animation = windows, 1, 5, overshot, slide
-  animation = windowsOut, 1, 4, smoothOut, slide
-  animation = windowsMove, 1, 4, default
-  animation = border, 1, 10, default
-  animation = fade, 1, 10, smoothIn
-  animation = fadeDim, 1, 10, smoothIn
-  animation = workspaces, 1, 6, default
+    animation = windows, 1, 1, linear, slide
+    animation = windowsOut, 1, 1, linear, slide
+    animation = border, 1, 1, linear
+    animation = fade, 1, 1, linear
+    animation = workspaces, 1, 1, linear, slide
+#  animation = windows, 1, 5, overshot, slide
+#  animation = windowsOut, 1, 4, smoothOut, slide
+#  animation = windowsMove, 1, 4, default
+#  animation = border, 1, 10, default
+#  animation = fade, 1, 10, smoothIn
+#  animation = fadeDim, 1, 10, smoothIn
+#  animation = workspaces, 1, 6, default
 }
 
 # LAYOUT
@@ -119,6 +125,7 @@ windowrule = move 75 44%, title:^(Volume Control)$
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
 
 bind = SUPER SHIFT, W, exec, bash/./hyprpaper.sh
+bind = SUPER , N, exec, hyprsunset
 bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, ghostty
@@ -126,7 +133,7 @@ bind = SUPER, E, exec, dolphin
 bind = SUPER, B, exec, floorp
 bind = SUPER, S, exec, com.spotify.Client
 bind = SUPER, escape, exec, shutdown now
-bind = SUPER, L, exec, hyprlock
+bind = SUPER, L, exec, /home/lostfromlight/.config/hypr/lock.sh
 bind = SUPER, C, exec, bash/./config.sh
 bind = SUPER, U, exec, dbus-run-session -- steam-run $(which unityhub)
 bind = SUPER, F, fullscreen,
