--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -3,8 +3,11 @@ general {
 }
 
 background {
-    monitor =
-    path = $HOME/.config/hypr/amy_lee.png
+    monitor = 
+    path = 
+    color = rgba(0, 0, 0, 0) 
+    blur_passes = 0 
+    noise = 0.0 
 }
 
 input-field {
