--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -125,7 +125,8 @@ windowrule = move 75 44%, title:^(Volume Control)$
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
 
 bind = SUPER SHIFT, W, exec, bash/./hyprpaper.sh
-bind = SUPER , N, exec, hyprsunset
+bind = SUPER , N, exec, hyprsunset --temperature 5000
+bind = SUPER SHIFT , N, exec, hyprsunset --identity
 bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, ghostty
