--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 # █▀▀ ▀▄▀ █▀▀ █▀▀
 # ██▄ █░█ ██▄ █▄▄
-exec-once = hyprlock
-exec-once = bash -c "sleep 0.5 && hyprpaper"
+exec-once = bash -c "/home/lostfromlight/.config/hypr/lock.sh"
+exec-once = bash -c "sleep 0.9 && hyprpaper"
 exec-once = waybar
 
 
@@ -239,4 +239,6 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 env = BROWSER,floorp
 env = DEFAULT_BROWSER,floorp
+env = XCURSOR_THEME=Bibata-Modern-Classic
+env = XCURSOR_SIZE, 24
 
