--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = /home/lostfromlight/NMN/Luminarium/kyrr.png
+preload = /home/lostfromlight/NMN/Luminarium/mountholo.jpg
 
-wallpaper = ,/home/lostfromlight/NMN/Luminarium/kyrr.png
+wallpaper = ,/home/lostfromlight/NMN/Luminarium/mountholo.jpg
 
 splash = false
