--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,40 +1,41 @@
-font-family = fantasque sans mono
+font-family = JetbrainsMono
 font-size = 14
 
-background            =   #000000
-foreground            =   #85d4d1
-cursor-color          =   #ff0017
-selection-background  = #f6d56a
-palette= 0=#341a0d
-palette= 8=#874227
-palette= 1=#95bd5e
-palette= 9=#ff4230
-palette= 2=#f77d02 
-palette= 10=#95bd5e
-palette= 3=#c26e27
-palette= 11=#ff9565
-palette= 4=#d0d4c9
-palette= 12=#9eb2b3
-palette= 5=#9b1d29
-palette= 13=#ff5b6a
-palette= 6=#588056
-palette= 14=#89cc8e
-palette= 7=#000000
-palette= 15=#ffffff
-selection-foreground  = #52363f
+background            = #000000
+foreground            = #f0f0f0
+cursor-color          = #ffffff
+selection-background  = #2a2a2a
+selection-foreground  = #e6e6e6
+
+palette=0=#1a1a1a
+palette=1=#444444
+palette=2=#555555
+palette=3=#666666
+palette=4=#777777
+palette=5=#888888
+palette=6=#999999
+palette=7=#aaaaaa
+palette=8=#bbbbbb
+palette=9=#cccccc
+palette=10=#dddddd
+palette=11=#e5e5e5
+palette=12=#ebebeb
+palette=13=#f2f2f2
+palette=14=#f7f7f7
+palette=15=#ffffff
+
 window-titlebar-background = #000000
-
-
+background-opacity = 1
 background-blur-radius = 20
 mouse-hide-while-typing = true
-#background-image = "/home/lostfromlight/NMN/Luminarium/grad.jpg"
-background-opacity = 0.2
 window-decoration = false
-
 confirm-close-surface = false
-custom-shader = /home/lostfromlight/.config/ghostty/shaders/grid.glsl
-custom-shader-animation = always
-##KEYBINDS##
+
+# background-image = "/home/lostfromlight/NMN/Luminarium/grad.jpg"
+# custom-shader = /home/lostfromlight/.config/ghostty/shaders/matrixhall.glsl
+# custom-shader-animation = always
+
+## KEYBINDS ##
 keybind = ctrl+s=new_split:right
 keybind = ctrl+left=goto_split:left
 keybind = ctrl+right=goto_split:right
@@ -53,3 +54,4 @@ keybind = global:ctrl+shift+w=toggle_quick_terminal
 keybind = ctrl+i=inspector:toggle
 keybind = ctrl+shift+plus=increase_font_size:1
 keybind = ctrl+shift+minus=decrease_font_size:1
+
