--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,6 +3,7 @@
 exec-once = bash -c "/home/lostfromlight/.config/hypr/lock.sh"
 exec-once = bash -c "sleep 0.9 && hyprpaper"
 exec-once = waybar
+exec-once = dunst
 
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
@@ -146,6 +147,8 @@ bind = Ctrl SHIFT, R, exec, reboot
 bind = SUPER, O, exec, obsidian
 bind = SUPER, D, exec, com.discordapp.Discord
 bind = SUPER SHIFT, B, exec, /home/lostfromlight/blender/result/bin/blender-fhs
+bind = SUPER, M, exec, ghostty -e ncmpcpp
+bind = SUPER SHIFT, T, exec, floorp https://monkeytype.com
 
 
 # MULTIMEDIA & BRIGHTNESS
