--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -17,38 +17,34 @@
             "signal": 8
         },
 
-		 "hyprland/workspaces": {
-        "format": "{icon}",
-        "format-icons": {
-            "1": "•",
-            "2": "•",
-            "3": "•",
-            "4": "•",
-            "5": "•",
-            "6": "•",
-            "7": "•",
-            "8": "•",
-            "9": "•",
-            "10": "•",
-            "urgent": "",
-            "active": "",
-            "default": ""
-        },
-        "on-click": "activate",
-        "active-only": false,
-        "all-outputs": true
+		"hyprland/workspaces": {
+			"format": "{icon}",
+		"format-icons": {
+			"1": "•",
+			"2": "•",
+			"3": "•",
+			"4": "•",
+			"5": "•",
+			"active": "",
+			"default": ""
+		},
+		"persistent-workspaces": {
+		"*": [ 2,3 ]
     },
+         "on-click": "activate",  
+        "all-outputs": true 
+		},
 
 		"custom/spotify": {
 		  "format": "  {}",
 		  "interval": 5,
-		  "on-click": "flatpak run com.spotify.Client",
+		  "on-click": "flatpak run com.spotify.client",
 		  "exec": "~/.config/waybar/scripts/spotify.sh"
 		},
 
         "clock": {
-            "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-            "format": "{:%a | %d %b | %I:%M %p}"
+			"tooltip-format": "<big>{:%y %b}</big>\n<tt><small>{calendar}</small></tt>",
+    "format": "{:%a | %d %b | %I:%M %p}"
         },
 
 /*		"custom/cava": {
