--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,6 +4,8 @@ exec-once = bash -c "/home/lostfromlight/.config/hypr/lock.sh"
 exec-once = bash -c "sleep 0.9 && hyprpaper"
 exec-once = waybar
 exec-once = dunst
+exec-once = pypr
+exec-once = mpd
 
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
@@ -37,17 +39,11 @@ general {
   border_size= 1
   resize_on_border = true
   col.active_border = rgba(ffffffff) rgba(ffffffff) 90deg
-  col.inactive_border = rgba(1E5D27aa)
-  allow_tearing = false # Check https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+  col.inactive_border = rgba(000000aa)
+  allow_tearing = false 
   layout = dwindle
 }
 
-#misc {
- # disable_hyprland_logo = true
-  #disable_splash_rendering = true
- #ouse_move_enables_dpms = true
- ## swallow_regex = ^(alacritty)$
-#}
 
 decoration {
     rounding = 5
@@ -64,24 +60,24 @@ decoration {
 }
 
 animations {
-  enabled = false
-#  bezier = overshot, 0.05, 0.9, 0.1, 1.05
-#  bezier = smoothOut, 0.36, 0, 0.66, -0.56
-#  bezier = smoothIn, 0.25, 1, 0.5, 1
-  bezier = linear, 1.0, 1.0, 0.0, 0.0
+  enabled = true
+  bezier = overshot, 0.05, 0.9, 0.1, 1.05
+  bezier = smoothOut, 0.36, 0, 0.66, -0.56
+ bezier = smoothIn, 0.25, 1, 0.5, 1
+ # bezier = linear, 1.0, 1.0, 0.0, 0.0
 
-    animation = windows, 1, 1, linear, slide
-    animation = windowsOut, 1, 1, linear, slide
-    animation = border, 1, 1, linear
-    animation = fade, 1, 1, linear
-    animation = workspaces, 1, 1, linear, slide
-#  animation = windows, 1, 5, overshot, slide
-#  animation = windowsOut, 1, 4, smoothOut, slide
-#  animation = windowsMove, 1, 4, default
-#  animation = border, 1, 10, default
-#  animation = fade, 1, 10, smoothIn
-#  animation = fadeDim, 1, 10, smoothIn
-#  animation = workspaces, 1, 6, default
+    #animation = windows, 1, 1, linear, slide
+    #animation = windowsOut, 1, 1, linear, slide
+    #animation = border, 1, 1, linear
+    #animation = fade, 1, 1, linear
+    #animation = workspaces, 1, 1, linear, slide
+  animation = windows, 1, 5, overshot, slide
+  animation = windowsOut, 1, 4, smoothOut, slide
+  animation = windowsMove, 1, 4, default
+  animation = border, 1, 10, default
+  animation = fade, 1, 10, smoothIn
+  animation = fadeDim, 1, 10, smoothIn
+  animation = workspaces, 1, 6, default
 }
 
 # LAYOUT
@@ -92,9 +88,11 @@ dwindle {
 
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
-#windowrulev2 = float,class:^(com.mitchellh.ghostty)$
-windowrulev2 = float, class:ghostty, title:ghostty
+windowrulev2 = float, class:^(com.mitchellh.ghostty)$
+windowrulev2 = size 70% 65%, class:^(com.mitchellh.ghostty)$
+#windowrulev2 = float, class:ghostty, title:ghostty
 windowrule = float, confirm
+windowrule = float, nmtui
 windowrule = float, dialog
 windowrule = float, download
 windowrule = float, notification
@@ -106,21 +104,16 @@ windowrule = float, title:branchdialog
 windowrule = float, nwg-look
 windowrule = float, Rofi
 windowrule = animation none,Rofi
-windowrule = float,viewnior
-windowrule = float,feh
 windowrule = float, pavucontrol-qt
+windowrule = center, pavucontrol-qt
 windowrule = float, pavucontrol
+windowrule = center, pavucontrol
 windowrule = float, file-roller
 windowrule = fullscreen, wlogout
 windowrule = float, title:wlogout
-windowrule = fullscreen, title:wlogout
-windowrule = idleinhibit focus, mpv
-windowrule = idleinhibit fullscreen, firefox
 windowrule = float, title:^(Media viewer)$
 windowrule = float, title:^(Volume Control)$
 windowrule = float, title:^(Picture-in-Picture)$
-windowrule = size 800 600, title:^(Volume Control)$
-windowrule = move 75 44%, title:^(Volume Control)$
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀
@@ -132,7 +125,7 @@ bind = SUPER, A, exec, pkill rofi || rofi -show drun
 bind = SUPER, W, exec, pkill waybar || waybar &
 bind = SUPER, X, exec, ghostty
 bind = SUPER, E, exec, dolphin
-bind = SUPER, B, exec, floorp
+bind = SUPER, B, exec, app.zen_browser.zen
 bind = SUPER, S, exec, com.spotify.Client
 bind = SUPER, escape, exec, shutdown now
 bind = SUPER, L, exec, /home/lostfromlight/.config/hypr/lock.sh
@@ -149,6 +142,12 @@ bind = SUPER, D, exec, com.discordapp.Discord
 bind = SUPER SHIFT, B, exec, /home/lostfromlight/blender/result/bin/blender-fhs
 bind = SUPER, M, exec, ghostty -e ncmpcpp
 bind = SUPER SHIFT, T, exec, floorp https://monkeytype.com
+bind = SUPER, Y, exec, ghostty -e yazi
+bind = SUPER, TAB, exec, pypr expose
+bind = SUPER, Z, exec, pypr zoom ++0.5
+bind = SUPER SHIFT, Z, exec, pypr zoom --0.5
+# workspace for expose
+workspace = special:exposed,gapsout:60,gapsin:30,bordersize:2,border:true,shadow:false
 
 
 # MULTIMEDIA & BRIGHTNESS
@@ -241,7 +240,7 @@ env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 env = BROWSER,floorp
-env = DEFAULT_BROWSER,floorp
+env = DEFAULT_BROWSER,app.zen_browser.zen
 env = XCURSOR_THEME=Bibata-Modern-Classic
 env = XCURSOR_SIZE, 24
 
